fixing flexbox alignment

--- a/blog-preview-card-main/src/style.css
+++ b/blog-preview-card-main/src/style.css
@@ -24,33 +24,32 @@
 
 body{
     background-color: var(--clr-yellow);
+    
 }
 
-/* 
+
+
+
 main{
-    width: 100;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-} */
-    
+}
+
 
 .card{
     display: flex;
-    justify-self: center;
-    align-self: center;
+
     flex-direction: column;
     
     justify-content: space-between;
     background-color: var(--clr-white);
     width: 80%;
-    /* max-width: 500px; */
     padding: 1.5em;
     border: 1px solid var(--clr-black);
     border-radius: 1em;
-    height:60%;
+    /* height:60%; */
     box-shadow: 0.5em 0.5em black;
     
 }
